--- a/ipa.plist
+++ b/ipa.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://dl.9917.com/i/2939/30/2/13/17/pack/1.3.3/111/3.1.6.0003/PalaceM4_1_3_3_cn_cn_ios_hwyappstore_20200317142936_adhoc.ipa</string>
+                        <string>http://127.0.0.1:10001/PalaceM4_1_3_3_cn_cn_ios_hwyappstore_20200317142936_adhoc.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
